member crud, 택시방 생성 및 조회